Fixed link spacing imgSection

--- a/storefront/components/ImageSection/ImageSection.module.css
+++ b/storefront/components/ImageSection/ImageSection.module.css
@@ -101,6 +101,7 @@
   color: #1e2b3c;
   display: flex;
   align-items: center;
+  margin-top: 20px;
 }
 
 .link:hover {
